# Watercan

./: .gitignore  CMakeLists.txt  DOCS_LINUX_BUILD.md  DOCS_WINDOWS_BUILD.md  README.md  imgui.ini  lsan_suppressions.txt
.github/workflows/: release.yml
Standalone/: Watercan.AppImage  Watercan.ldd.txt  Watercan.sha256
Standalone/Watercan.AppDir/: .DirIcon  AppRun  DOCS_LINUX_BUILD.md  README.md
Standalone/Watercan.AppDir/res/res/: inneruniverse.lrc
Standalone/Watercan.AppDir/usr/lib/: libSDL2-2.0.so.0
Standalone/Watercan.AppDir/usr/share/applications/: Watercan.desktop
Standalone/Windows/: README.md  imgui.ini
build-asan/: imgui.ini
cmake/: embed_bin.py  mingw-x86_64-toolchain.cmake
res/: inneruniverse.lrc
scripts/: build_appimage.sh  build_single.sh  package_release.sh
src/: TextEditor.cpp  app.cpp  app.h  app_type_colors.cpp  embedded_resources.h  main.cpp  music_player.cpp  music_player.h  spirit_tree.cpp  spirit_tree.h  stb_vorbis.c  stb_vorbis_impl.c  tree_renderer.cpp  tree_renderer.h  video_player.cpp  video_player.h  winmain_wrapper.cpp
